# nand2tetris

./: .gitignore  README.md
01/: And.hdl  DMux.hdl  DMux4Way.hdl  DMux8Way.hdl  Mux.hdl  Mux16.hdl  Mux4Way16.hdl  Mux8Way16.hdl  Not16.hdl  Or.hdl  Or8Way.hdl  README.md  Xor.hdl
01-boolean-logic/: And.hdl  And16.tst  Mux.hdl  Mux16.tst  Mux8Way16.hdl  Not16.tst  Or16.tst  Or8Way.hdl  Or8Way.tst  README.md
02-boolean-arithmetic/: ALU.hdl  Add16.hdl  FullAdder.hdl  README.md
03-sequential-logic/: README.md
03-sequential-logic/a/: Bit.hdl  PC.hdl  RAM64.hdl  RAM8.hdl
03-sequential-logic/b/: RAM16K.hdl  RAM4K.hdl  RAM512.hdl
04-machine-language/: README.md
04-machine-language/fill/: Fill.asm
04-machine-language/mult/: mult.asm
05-computer-achitecture/: CPU.hdl  Computer.hdl  Memory.hdl  README.md
06-assembler/: README.md
06-assembler/add/: Add.asm
10-compiler1-syntax-analysis/ArrayTest/: Main.jack
10-compiler1-syntax-analysis/ExpressionLessSquare/: Square.jack
12-operating-system/: compile.ps1
12-operating-system/ArrayTest/: Array.jack  README.md
12-operating-system/KeyboardTest/: Keyboard.jack
12-operating-system/MathTest/: Math.jack
hack-assembler/: .gitignore  Cargo.toml  README.md  test.ps1
jack-analyzer/: .gitignore  Cargo.toml  README.md  test.ps1
jack-compiler/: Cargo.toml
vm-translator/: Cargo.toml  README.md  test.ps1
vm-translator/src/: lib.rs
vm-translator/src/codegen/: idiom.rs  mod.rs  vm_bool.rs
vm-translator/src/parser/: arithmetic.rs  flow.rs  func.rs  mem_access.rs  mod.rs  segment.rs
(+36 files in other folders)
